--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             </div>
             <div class="wins">
                 <h4>Wins:</h4>
-                <h2>0</h2>
+                <h2 id="wins">0</h2>
             </div>
             <div class="draws">
                 <h4>Draws:</h4>
-                <h2>0</h2>
+                <h2 id="draws">0</h2>
             </div>
             <div class="loses">
                 <h4>Losses:</h4>
-                <h2>0</h2>
+                <h2 id="loss">0</h2>
             </div>
         </div>
         <div class="game">
@@ -71,10 +71,14 @@
 
 
 
-
-    <div class="rules">
-        <p>Rules</p>
-    </div>
+        <div class="bottom-side">
+            <div class="rules">
+                <p>Rules</p>
+            </div>
+            <div class="restart" id="restart">
+                <p>Restart</p>
+            </div>
+        </div>
         <div class="footer">
             <p class="footer-first">Game created by </p>
             <a href="kamilshaikha.netlify.com"><p class="footer-second"> Kamil Shaikha </p></a>
